# text2splat

./: .gitignore  README.md  pyproject.toml
scripts/: colmap_compat.sh  run_multiview_splat.sh
src/dan/: __init__.py  dummy.py  multiview.py
src/hc/: __init__.py  dummy.py
src/tsw/: __init__.py  dummy.py  sharp_trial.py
