[project]
name = "text2splat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.1",
]

[project.scripts]
tsw-sharp = "tsw.sharp_trial:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["dan", "hc", "tsw"]
